# llm-mcq-bias

./: .gitignore  Makefile  conftest.py  environment.sh  pyproject.toml  pytest.ini  ruff.toml
notebooks/: 00-exploring-order-dependency.ipynb  00-overview.ipynb  01-dataset.ipynb  02-demonstrate-bias-all.ipynb  02-demonstrate-bias-gpt-4o-mini.ipynb  02-demonstrate-bias-ollama.ipynb
notebooks/exports/: 20241106-00-exploring-order-dependency.html
notebooks/results/: demonstrate-bias-gpt-4o-mini-240-run1.json  demonstrate-bias-llama-160-5epochs-run1.json  demonstrate-bias-llama-160-run1.json  order-dependency-gemma2-9b-160-10-20241105.json  order-dependency-gpt-4o-mini-160-3-20241105.json  order-dependency-llama32-3b-fp16-160-10-20241105.json
notebooks/snapshots/: 02-demonstrate-bias-llama-run1.ipynb  02-demonstrate-bias-llama-run2.ipynb  order-dependency-gemma2-9b-160-10-20241105.ipynb  order-dependency-gpt-4o-mini-160-3-20241105.ipynb  order-dependency-llama32-3b-fp16-160-10-20241105.ipynb
src/llm_mcq_bias/datasets/: __init__.py  mmlu.py
src/llm_mcq_bias/models/: __init__.py  _generator.py  _hf.py  _llama.py  _ollama.py  _openai.py
src/llm_mcq_bias/tools/: __init__.py  _common.py  _shell.py  _torch.py
tests/fixtures/: common_fixtures.py
tests/integration/: test_llama_mmlu.py  test_ollama_mmlu.py  test_openai_mmlu.py
tests/unit/datasets/: test_mmlu.py
tests/unit/models/: test_hf.py  test_llama.py  test_models.py  test_ollama.py  test_openai.py
