#-------------------------------------------------------------------------------
# Project: grotto
#-------------------------------------------------------------------------------

[project]

name = "llm-mcq-bias"
dynamic = ["version"]
requires-python = ">=3.12"

dependencies = [
    "ipywidgets>=8.1.5",
    "ollama>=0.3.3",
    "pandas>=2.2.3",
    "torch>=2.5.1",
    "transformers>=4.46.1",
]

#-------------------------------------------------------------------------------
# Dev Dependencies
#-------------------------------------------------------------------------------

[tool.uv]
dev-dependencies = [
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.7.0",
    "jupyterlab>=4.3.0",
]

#-------------------------------------------------------------------------------
# Build System
#-------------------------------------------------------------------------------

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

#-------------------------------------------------------------------------------
# Build Backend
#-------------------------------------------------------------------------------

[tool.hatch.version]

source = "env"
variable = "PY_VERSION"
